data/all_generated_tests/raw_wast_tests/call_indirect_InfiniteLoops_4137.wast
;; 6. **Test 6**:    - Test proper function type conformity by calling a function indirectly that has looped instructions, with the included `typeidx` mismatching the called function's type. The loop contains misconfigured `br` instructions leading to potential infinite loop conditions.    - **Constraint Checked**: Checks type matching of function calls and evaluates loop control flow handling in mismatched type scenarios.

(assert_invalid
  (module
    (type $correct (func (param i32)))
    (type $incorrect (func (param f64)))
    (func $f (type $correct) (param i32))
    (table funcref (elem $f))
    (func $loop-mismatched-type
      (loop
        (call_indirect (type $incorrect) (i32.const 0))
        (br 0)
      )
    )
  )
  "type mismatch"
)